--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
     "@auth/prisma-adapter": "^1.0.0",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.10.0",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "get-audio-duration": "^4.0.1",
     "howler": "^2.2.4",
+    "lucide-react": "^0.483.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
